--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -51,6 +51,7 @@
      <string>统计</string>
     </property>
     <addaction name="actionFilePath"/>
+    <addaction name="actionStartup"/>
     <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menu_2">
@@ -82,6 +83,14 @@
   <action name="actionExit">
    <property name="text">
     <string>退出</string>
+   </property>
+  </action>
+  <action name="actionStartup">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>开机自启</string>
    </property>
   </action>
  </widget>
